Added new Cards from v4l2 - not tested

--- a/DScaler/Release/CX2388xCards.ini
+++ b/DScaler/Release/CX2388xCards.ini
@@ -1,8 +1,11 @@
-; $Id: CX2388xCards.ini,v 1.12 2006-12-29 23:05:45 to_see Exp $
+; $Id: CX2388xCards.ini,v 1.13 2007-01-01 20:21:39 to_see Exp $
 ;
 ; CX2388x card list.
 ;
 ; $Log: not supported by cvs2svn $
+; Revision 1.12  2006/12/29 23:05:45  to_see
+; Updated card list
+;
 ; Revision 1.11  2005/11/14 18:38:36  to_see
 ; Added new Card: 10Moon TVBaby3
 ;
@@ -423,7 +426,7 @@ UseTDA9887 ()
 ;Only mono audio direct from tuner supported.
 ;
 ;Thanks Denis Love
-;v4l card: #3, #11
+;v4l card: #3, #11, #27
 AutoDetectID = 0x48111554
 DefaultTuner = philips_pal
 
@@ -447,7 +450,7 @@ Input ( "S-Video", svideo )
 ;
 ;Please close your PVR and IR apps in system tray to
 ;get audio before you start DScaler.
-;v4l card: #3, #11
+;v4l card: #3, #11, #27
 AutoDetectID = 0x48111554
 DefaultTuner = philips_pal
 
@@ -576,6 +579,7 @@ UseTDA9887 ()
 [Leadtek WinFast DV2000]
 ;from v4l, card #8
 AutoDetectID = 0x6620107D
+;Todo: update tuner init
 DefaultTuner = philips_fmd1216me_mk3
 
 Input ( "Tuner", tuner)
@@ -602,6 +606,7 @@ UseTDA9887 ()
 [Leadtek WinFast PVR2000]
 ;from v4l2, card #9
 AutoDetectID = 0x663B107D, 0x663C107D,
+;Todo: update tuner init
 DefaultTuner = philips_fmd1216me_mk3
 
 Input ( "Tuner", tuner)
@@ -642,7 +647,7 @@ Input ( "S-Video", svideo )
 UseTDA9887 ()
 
 
-[K-World/VStream XPert DVB-T]
+[K-World/V-Stream XPert DVB-T]
 ;from v4l (analog part only), card #14
 ;Todo: reset code on GPIO's
 AutoDetectID = 0x08a617de
@@ -794,16 +799,16 @@ AutoDetectID =0xea3d14f1
 DefaultTuner = hitachi_ntsc 
 
 Input ( "Tuner", tuner)
-MuxSelect = 0
-GPIOSet ( 0x000000ff, 0x0000f35d, 0x00000019, 0x00000000 )
+    MuxSelect = 0
+    GPIOSet ( 0x000000ff, 0x0000f35d, 0x00000019, 0x00000000 )
 
 Input ( "Composite", composite )
-MuxSelect = 1
-GPIOSet ( 0x000000ff, 0x0000f37d, 0x00000019, 0x00000000 )
+    MuxSelect = 1
+    GPIOSet ( 0x000000ff, 0x0000f37d, 0x00000019, 0x00000000 )
 
 Input ( "S-Video", svideo )
-MuxSelect = 2
-GPIOSet ( 0x000000ff, 0x0000f37d, 0x00000019, 0x00000000 )
+    MuxSelect = 2
+    GPIOSet ( 0x000000ff, 0x0000f37d, 0x00000019, 0x00000000 )
 
 
 [pcHDTV HD3000 HDTV]
@@ -812,6 +817,10 @@ AutoDetectID = 0x30007063
 ;Note: correct tuner model is "Thomson DTT761x", not supported atm.
 ;Todo: add new tuner device, hope mk3's settings are working
 DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+    MuxSelect = 0
+    GPIOSet ( 0x00008484 )
 
 Input ( "Composite", composite )
 	MuxSelect = 1
@@ -830,14 +839,34 @@ UseTDA9887 ()
 	SetModes ( secam-l  ) = { OutputPort2 = active }
 
 
+[digitalnow DNTV Live! DVB-T]
+;from v4l (analog part only), card #23 
+;Todo: reset code on GPIO's
+AutoDetectID = 0xa8a617de
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000700, 0x00000101 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000700, 0x00000101 )
+
+
 [Hauppauge WinTV 28xxx (Roslyn) models]
-;from v4l, card #24 
+;from v4l (analog part only), card #24 
 AutoDetectID = 0x28010070
-DefaultTuner = setup
+DefaultTuner = auto
 
 Input ( "Tuner", tuner)
 	MuxSelect = 0
 	GPIOSet ( 0x0000ed1a, 0x00000000, 0x000000ff )
+
+;debug only
+Input ( "Tuner (Mono Audio)", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000ff01 )
 
 Input ( "Composite", composite )
 	MuxSelect = 1
@@ -847,7 +876,556 @@ Input ( "S-Video", svideo )
 	MuxSelect = 2
 	GPIOSet ( 0x0000ed92, 0x00000000, 0x000000ff )
 
-;
+
+[Digital-Logic MICROSPACE Entertainment Center (MEC)]
+;from v4l (analog part only), card #25 
+;Blackbird PVR Card with HW MPEG Encoder
+;Todo: ext. ADC
+AutoDetectID = 0xd03510fc
+DefaultTuner = philips_fm1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00009d80 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00009d76 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00009d76 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[DViCO FusionHDTV 3 Gold-T]
+;from v4l (analog part only), card #28 
+AutoDetectID = 0xd82018ac
+;Note: correct tuner model is "Thomson DTT761x", not supported atm.
+;Todo: add new tuner device, hope mk3's settings are working
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000097ed )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000097e9 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000097e9 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[ADS Tech Instant TV DVB-T PCI]
+;from v4l (analog part only), card #29 
+AutoDetectID = 0x03341421
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000700, 0x00000000, 0x00000101 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000700, 0x00000000, 0x00000101 )
+
+
+[DViCO FusionHDTV 5 Gold]
+;from v4l (analog part only), card #31 
+AutoDetectID = 0xd50018ac
+;Todo: add new tuner device: TUNER_LG_TDVS_H06XF-H062F
+DefaultTuner = absent
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+    GPIOSet ( 0x000087fd )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000087f9 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000087f9 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[AverMedia UltraTV Media Center PCI 550]
+;from v4l (analog part only), card #32 
+;Blackbird PVR Card with HW MPEG Encoder
+;Todo: ext. ADC
+AutoDetectID = 0x80111461
+DefaultTuner = philips_fm1236_mk3
+
+Input ( "Tuner", tuner)
+    ;3 (no typo) ?!
+	MuxSelect = 3
+	GPIOSet ( 0x0000cdb3 )
+
+Input ( "Composite", composite )
+    ;0 (no typo) ?!
+	MuxSelect = 0
+	GPIOSet ( 0x0000cd73 )
+
+Input ( "S-Video", svideo )
+    ;0 (no typo) ?!
+	MuxSelect = 0
+	GPIOSet ( 0x0000cd73 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[K-World/V-Stream Xpert DVD]
+;from v4l (analog part only), card #33
+;no Eeprom 
+;AutoDetectID = 
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x03000000, 0x01000000, 0x02000000, 0x00100000 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x03000000, 0x01000000, 0x02000000, 0x00100000 )
+
+
+[ATI HDTV Wonder]
+;from v4l (analog part only), card #34
+AutoDetectID = 0xa1011002
+;Todo: reset code on GPIO's + new tuner device TUNER_PHILIPS_TUV1236D
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00000ff7, 0x000000ff, 0x00000001 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000ffe, 0x000000ff, 0x00000001 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000ffe, 0x000000ff, 0x00000001 )
+
+
+[Hauppauge Nova-S-Plus DVB-S]
+;from v4l (analog part only), card #37
+AutoDetectID = 0x92010070, 0x92020070
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+
+
+[K-World DVB-S 100]
+;from v4l (analog part only), card #39
+AutoDetectID = 0x08b217de
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+
+
+[Hauppauge WinTV-HVR1100 DVB-T/Hybrid]
+;from v4l (analog part only), card #40
+AutoDetectID = 0x94020070, 0x94000070
+;Todo: update tuner init
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[Hauppauge WinTV-HVR1100 DVB-T/Hybrid  (Low Profile)]
+;from v4l (analog part only), card #41
+AutoDetectID = 0x98020070, 0x98000070
+;Todo: update tuner init
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[digitalnow DNTV Live! DVB-T Pro]
+;from v4l (analog part only), card #42
+AutoDetectID = 0x00251822
+;Todo: update tuner init, reset code on GPIO's, secondary I2C bus with vp3054
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00f80808 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00f80808 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00f80808 )
+
+;TDA9887 settings not tested
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { OutputPort1 = active, OutputPort2 = active, intercarrier }
+	SetModes ( secam-l  ) = { OutputPort1 = active, OutputPort2 = active }
+
+
+[K-World/V-Stream XPert DVB-T with cx22702]
+;from v4l (analog part only), card #43
+AutoDetectID = 0x08a117de
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00000700, 0x00000000, 0x00000101 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00000700, 0x00000000, 0x00000101 )
+
+
+[DViCO FusionHDTV DVB-T Dual Digital]
+;from v4l (analog part only), card #44
+AutoDetectID = 0xdb5018ac, 0xdb5418ac
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000067df )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000067df )
+
+
+[K-World HardwareMpegTV XPert]
+;from v4l (analog part only), card #45
+;Blackbird PVR Card with HW MPEG Encoder
+AutoDetectID = 0x084017de, 0x03051421
+;Todo: update tuner code
+DefaultTuner = philips_tda8275
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00003de2, 0x00000000, 0x000000ff )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00003de6, 0x00000000, 0x000000ff )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00003de6, 0x00000000, 0x000000ff )
+
+
+[DViCO FusionHDTV DVB-T Hybrid]
+;from v4l (analog part only), card #46
+AutoDetectID = 0xdb4018ac, 0xdb4418ac
+;Todo: update tuner code TUNER_THOMSON_FE6600
+DefaultTuner = absent
+
+;Input ( "Tuner", tuner)
+;	MuxSelect = 0
+;	GPIOSet ( 0x0000a75f )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000a75b )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000a75b )
+
+
+[pcHDTV HD5500 HDTV]
+;from v4l (analog part only), card #47
+AutoDetectID = 0x55007063
+;Todo: reset code on GPIO's, add new tuner device: TUNER_LG_TDVS_H06XF-H062F
+DefaultTuner = absent
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000087fd )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000087f9 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000087f9 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[K-World MCE 200 Deluxe]
+;from v4l (analog part only), card #48
+;Blackbird PVR Card with HW MPEG Encoder
+AutoDetectID = 0x084117de
+DefaultTuner = tena_9533_di
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000bde6 )
+
+;FIXME: tested TV input only, disabled composite,
+;svideo and radio until they can be tested also.
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000bde6 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000bde6 )
+
+
+[PixelView PlayTV P7000]
+;from v4l (analog part only), card #49
+;Blackbird PVR Card with HW MPEG Encoder
+AutoDetectID = 0x48131554
+DefaultTuner = philips_fm1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00005da6 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x00005da4 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x00005da5 )
+
+;TDA9887 settings not tested
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { OutputPort1 = active, OutputPort2 = active, intercarrier }
+	SetModes ( secam-l  ) = { OutputPort1 = active, OutputPort2 = active }
+
+
+[NPG Tech Real TV FM Top 10]
+;from v4l, card #50
+AutoDetectID = 0x084214f1
+;Todo: add/update TUNER_TNF_5335MF / TNF9535
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00000788 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000078b )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000078b )
+
+
+[Leadtek WinFast DTV2000H]
+;from v4l (analog part only), card #51
+AutoDetectID = 0x665e107d
+;Todo: update tuner init
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00017304, 0x00008203, 0x00017304, 0x02000000 )
+
+;video inputs and radio still in testing
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[Geniatech DVB-S]
+;from v4l (analog part only), card #52
+AutoDetectID = 0x008414f1
+DefaultTuner = absent
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+
+
+[Hauppauge WinTV-HVR3000 TriMode Analog/DVB-S/DVB-T]
+;from v4l (analog part only), card #53
+;Todo: update DS's parser class for four AutoDetectID's: 0x14040070 is here missing
+AutoDetectID = 0x14000070, 0x14010070, 0x14020070
+;Todo: update tuner init
+DefaultTuner = philips_fmd1216me_mk3
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x000084bf )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x000084bf )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x000084bf )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
+
+[Norwood Micro TV Tuner]
+;from v4l, card #54
+;no Eeprom 
+;AutoDetectID = 
+;Todo: add new tuner device TUNER_TNF_5335MF
+DefaultTuner = setup
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x00000709 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000070b )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000070b )
+
+
+[Shenzhen Tungsten Ages Tech TE-DTV-250 / Swann OEM]
+;from v4l, card #55
+AutoDetectID = 0xc980c180
+DefaultTuner = lg_tapcnew_pal
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x003fffff, 0x00e00000, 0x003fffff, 0x02000000 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x003fffff, 0x00e00000, 0x003fffff, 0x02000000 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x003fffff, 0x00e00000, 0x003fffff, 0x02000000 )
+
+
+[Hauppauge WinTV-HVR1300 DVB-T/Hybrid MPEG Encoder]
+;from v4l (analog part only), card #56
+;Blackbird PVR Card with HW MPEG Encoder
+;Todo: add AUDIO_CHIP_WM8775
+AutoDetectID = 0x96000070, 0x96010070, 0x96020070
+DefaultTuner = auto
+
+Input ( "Tuner", tuner)
+	MuxSelect = 0
+	GPIOSet ( 0x0000e780 )
+
+Input ( "Composite", composite )
+	MuxSelect = 1
+	GPIOSet ( 0x0000e780 )
+
+Input ( "S-Video", svideo )
+	MuxSelect = 2
+	GPIOSet ( 0x0000e780 )
+
+;TDA9887 settings not tested - just copied from Leadtek WinFast TV2000 XP Expert
+UseTDA9887 ()
+	SetModes ( pal-bg   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-i    ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( pal-dk   ) = { OutputPort1 = active, OutputPort2 = active }
+	SetModes ( ntsc-m   ) = { intercarrier, OutputPort1 = active }
+	SetModes ( secam-l  ) = { OutputPort2 = active }
+
 
 ; ***** Tuner list: (as at July 2005) *****
 ; auto                        -2
