--- a/DScaler/Driver/DSDrv95/DSDrv95.rc
+++ b/DScaler/Driver/DSDrv95/DSDrv95.rc
@@ -51,7 +51,7 @@ BEGIN
             VALUE "FileDescription", "DSDrv4\0"
             VALUE "FileVersion", VERSTRING_ZT
             VALUE "InternalName", "DSDrv4\0"
-            VALUE "LegalCopyright", "Copyright © 2000, 2001, 2002, 2003\0"
+            VALUE "LegalCopyright", "Copyright © 2000-2007\0"
             VALUE "LegalTrademarks", "This driver is covered by the term of the GNU GPL\0"
             VALUE "OriginalFilename", "DSDrv4.dll\0"
             VALUE "PrivateBuild", "\0"
